--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "textMistake",
+    "name": "text-mistake",
     "version": "1.0.0",
     "main": "jquery.textmistake.js",
     "ignore": [
